@@ -1,5 +1,5 @@
 /**********************************************************************
- * $Id: mitab_indfile.cpp,v 1.11 2005-04-29 19:08:56 dmorissette Exp $
+ * $Id: mitab_indfile.cpp,v 1.12 2007-12-11 03:43:03 dmorissette Exp $
  *
  * Name:     mitab_indfile.cpp
  * Project:  MapInfo TAB Read/Write library
@@ -31,7 +31,11 @@
  **********************************************************************
  *
  * $Log: mitab_indfile.cpp,v $
- * Revision 1.11  2005-04-29 19:08:56  dmorissette
+ * Revision 1.12  2007-12-11 03:43:03  dmorissette
+ * Added reporting access mode to error message in TABINDFile::Open()
+ * (GDAL changeset r12460, ticket 1620)
+ *
+ * Revision 1.11  2005/04/29 19:08:56  dmorissette
  * Produce an error if m_nSubtreeDepth > 255 when creating a .IND (OGR bug 839)
  *
  * Revision 1.10  2004/06/30 20:29:04  dmorissette
@@ -181,7 +185,7 @@ int TABINDFile::Open(const char *pszFname, const char *pszAccess,
     {
         if (!bTestOpenNoError)
             CPLError(CE_Failure, CPLE_FileIO,
-                     "Open() failed for %s", m_pszFname);
+                     "Open() failed for %s (%s)", m_pszFname, pszAccess);
 
         CPLFree(m_pszFname);
         m_pszFname = NULL;
